--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
     <!-- GOOGLE FONT -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
     
-    <title>React App</title>
+    <title>Homepage</title>
   </head>
   <body>
     <noscript>
